cabal-version:      3.0
name:               publis
version:            0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alp Mestanogullari
maintainer:         alpmestan@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable publis
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    async, base, containers, servant-server, text, bytestring, wreq, aeson, lens-aeson, lens, scientific, wai, warp
    hs-source-dirs:   exe
    default-language: GHC2021
